--- a/style.css
+++ b/style.css
@@ -43,4 +43,9 @@ body {
     text-align: left;
     border-radius: 4px;
     cursor: pointer;
+    transition: all .3s;
+}
+.btn:hover {
+    background: #222;
+    color: #fff;
 }
