--- a/style.css
+++ b/style.css
@@ -45,9 +45,12 @@ body {
     cursor: pointer;
     transition: all .3s;
 }
-.btn:hover {
+.btn:hover:not([disabled]) {
     background: #222;
     color: #fff;
+}
+.btn:disabled{
+    cursor: no-drop;
 }
 
 #next-btn {
